Fixed team section view on tablet

--- a/css/style.scss
+++ b/css/style.scss
@@ -1584,9 +1584,7 @@ box-shadow: 0px 0px 38px 6px rgba(222,221,221,0.84);
 			font-style: italic;
 			text-align: center;
 			color: #979797;
-			min-height: 60px;
 			line-height: 14px;
-			padding: 0 30px;
 			position: relative;
 
 			@include mobile {
@@ -3946,6 +3944,9 @@ box-shadow: 0px 0px 21px 7px rgba(200,202,205,0.74);
 		.raised-progressbar h6 {
     		text-align: right;
 		}
+	}
+	.team .team-large > div{
+		min-height: 410px;
 	}
 }
 @media (max-width: 767px) {
